# autoprofit-vercel-supabase

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  vercel.json
.github/workflows/: autopilot.yml  ci.yml
api/: index.py
autoprofit/: __init__.py  cli.py  database.py  generator.py  models.py  offers.py  pipeline.py  publisher.py  settings.py  sources.py  utils.py  web.py
autoprofit/templates/: index.html.j2  post.html.j2
config/: fallback_keywords.yaml  offers.yaml
public/: index.html
public/posts/: best-ai-tools-for-small-business-20260227.html  top-privacy-software-for-remote-teams.html
references/: monetization-research.md  workflow-principles.md
tasks/: lessons.md  todo.md
tests/: test_offers.py  test_pipeline.py  test_settings_runtime.py  test_supabase.py  test_web.py
